fix: Fix scroll staying stuck when opening the nav menu and resizing the screen.
This bug is caused when a modal that locks the scroll is opened at lower screen sizes, and then the user resizes the screen causing the modal to disappear without unlocking the scroll first.
Fixed it by adding a --collapsed attribute to the modal, and adding a resize observer for the modal that checks the attribute and unstucks the scroll when it is no longer collapsed

--- a/content/sass/components/nav-menu.scss
+++ b/content/sass/components/nav-menu.scss
@@ -40,6 +40,7 @@
 }
 
 @mixin collapsed-style {
+    --collapsed: true;
     $animation-dur: 250ms;
     $fade-in-dur: 300ms;
 
